--- a/.env.dist
+++ b/.env.dist
@@ -21,3 +21,16 @@ MAILER_DSN=
 ###< symfony/google-mailer ###
 
 REDIS_URL=redis://redis-skeleton:6379
+
+RABBITMQ_HOST=
+RABBITMQ_PORT=
+RABBITMQ_USER=
+RABBITMQ_PASSWORD=
+RABBITMQ_VHOST=/
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=
+###< symfony/messenger ###
+
+LOGSTASH_HOST=
+LOGSTASH_PORT=
