--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "gedmo/doctrine-extensions": "^3.17",
         "lexik/jwt-authentication-bundle": "^2.21",
         "nelmio/cors-bundle": "^2.5",
+        "php-amqplib/php-amqplib": "^3.7",
+        "php-amqplib/rabbitmq-bundle": "^2.17",
         "predis/predis": "^2.3",
+        "symfony/amqp-messenger": "6.4.*",
         "symfony/cache": "6.4.*",
         "symfony/console": "6.4.*",
         "symfony/dotenv": "6.4.*",
@@ -25,6 +28,8 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/google-mailer": "6.4.*",
         "symfony/mailer": "6.4.*",
+        "symfony/messenger": "6.4.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "6.4.*",
         "symfony/security-bundle": "6.4.*",
         "symfony/serializer": "6.4.*",
@@ -73,7 +78,11 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "cs-fix": "vendor/bin/php-cs-fixer fix",
+        "cs-check": "vendor/bin/php-cs-fixer fix --dry-run --diff",
+        "phpstan": "vendor/bin/phpstan analyse --memory-limit=512M",
+        "test": "vendor/bin/phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
